tests/expectations/compiler/finalize/read_write_mapping_fail.out
Error [ETYC0372117]: Expected an array but type `(address => u128)` was found.
    --> compiler-test:7:16
     |
   7 |         return balances[addr];
     |                ^^^^^^^^
Error [ETYC0372117]: Expected an integer but type `address` was found.
    --> compiler-test:7:25
     |
   7 |         return balances[addr];
     |                         ^^^^
Error [ETYC0372125]: Cannot assign to the mapping `test.aleo::balances`.
    --> compiler-test:11:9
     |
  11 |         balances[addr] = amount;
     |         ^^^^^^^^
Error [ETYC0372117]: Expected an array but type `(address => u128)` was found.
    --> compiler-test:11:9
     |
  11 |         balances[addr] = amount;
     |         ^^^^^^^^
Error [ETYC0372117]: Expected an integer but type `address` was found.
    --> compiler-test:11:18
     |
  11 |         balances[addr] = amount;
     |                  ^^^^
Error [ETYC0372125]: Cannot assign to the mapping `test.aleo::balances`.
    --> compiler-test:15:9
     |
  15 |         balances = misc;
     |         ^^^^^^^^
